--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Project1_Data_Sheet/~$*.xlsx
 Project2_mobike/UTSEUS-MOBIKE-shanghai_full.csv
 
 Project2_mobike/mobike-df.pickle
+
+Project2_mobike/.ipynb_checkpoints/
